2010-05-05  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adele Peterson.

        https://bugs.webkit.org/show_bug.cgi?id=38546
        Node.focus() fails to move focus from subframe properly

        * fast/frames/take-focus-from-iframe.html: Added.
        * platform/mac/fast/frames/take-focus-from-iframe-expected.checksum: Added.
        * platform/mac/fast/frames/take-focus-from-iframe-expected.png: Added.
        * platform/mac/fast/frames/take-focus-from-iframe-expected.txt: Added.

2010-05-05  Jeremy Moskovich  <jeremy@chromium.org>

        Unreviewed, updated baselines.

        skia r561 broke a bunch of chromium image baselines.
        Update test_expectations to include remaining failures.

        * platform/chromium/test_expectations.txt:

2010-05-05  Jeremy Moskovich  <jeremy@chromium.org>

        Unreviewed, updated baselines.

        skia r561 broke a bunch of chromium image baselines.
        Rebase a few tests that were missed by previous passes.

        * platform/chromium-linux/svg/W3C-SVG-1.1/filters-diffuse-01-f-expected.checksum:
        * platform/chromium-linux/svg/W3C-SVG-1.1/filters-diffuse-01-f-expected.png:
        * platform/chromium-linux/svg/custom/mask-changes-expected.checksum: Added.
        * platform/chromium-linux/svg/custom/mask-changes-expected.png: Added.
        * platform/chromium/test_expectations.txt:

2010-05-05  Jeremy Moskovich  <jeremy@chromium.org>

        Unreviewed, updated baselines - 6th and final batch.

        skia r561 broke a bunch of chromium image baselines.
        <long list of new image baselines redacted>

        * platform/chromium/test_expectations.txt:

2010-05-05  Jeremy Moskovich  <jeremy@chromium.org>

        Unreviewed, updated baselines - 5th batch.

        skia r561 broke a bunch of chromium image baselines.
        <long list of new image baselines redacted>

        * platform/chromium/test_expectations.txt:

2010-05-05  Jeremy Moskovich  <jeremy@chromium.org>
