@@ -1,25 +1,0 @@
-layer at (0,0) size 800x600
-  RenderView at (0,0) size 800x600
-layer at (0,0) size 800x600
-  RenderBlock {HTML} at (0,0) size 800x600
-    RenderBody {BODY} at (8,8) size 784x576
-      RenderBlock (anonymous) at (0,0) size 784x44
-        RenderPartObject {IFRAME} at (0,0) size 204x44 [border: (2px inset #000000)]
-          layer at (0,0) size 200x40
-            RenderView at (0,0) size 200x40
-          layer at (0,0) size 200x40
-            RenderBlock {HTML} at (0,0) size 200x40
-              RenderBody {BODY} at (8,8) size 184x24
-                RenderTextControl {INPUT} at (2,2) size 125x19 [bgcolor=#FFFFFF] [border: (2px inset #000000)]
-          layer at (13,13) size 119x13
-            RenderBlock {DIV} at (3,3) size 119x13
-        RenderText {#text} at (0,0) size 0x0
-      RenderBlock {P} at (0,60) size 784x23
-        RenderText {#text} at (0,2) size 366x18
-          text run at (0,2) width 366: "This field should look and act focused. Try to type into it: "
-        RenderTextControl {INPUT} at (368,2) size 125x19 [bgcolor=#FFFFFF] [border: (2px inset #000000)]
-layer at (379,73) size 119x13
-  RenderBlock {DIV} at (3,3) size 119x13
-    RenderText {#text} at (1,0) size 26x13
-      text run at (1,0) width 26: "PASS"
-caret: position 4 of child 0 {#text} of child 0 {DIV} of child 1 {INPUT} of child 3 {P} of child 1 {BODY} of child 0 {HTML} of document
