@@ -1,3 +1,13 @@
+2010-05-05  Alexey Proskuryakov  <ap@apple.com>
+
+        Roll out r58830 for breaking tests.
+
+        Was: https://bugs.webkit.org/show_bug.cgi?id=38546
+        Node.focus() fails to move focus from subframe properly
+
+        * html/HTMLFrameElementBase.cpp:
+        (WebCore::HTMLFrameElementBase::setFocus):
+
 2010-05-05  Jian Li  <jianli@chromium.org>
 
         Reviewed by Adam Barth.
